<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_p_o_i"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CreatePOIFragment"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_POI"
        android:textAlignment="center"
        style="@style/StyleTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="-180dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="250dp"
        app:cardCornerRadius="@dimen/corner_value"
        android:layout_marginLeft="25dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/POINameEditText"
                android:layout_width="250dp"
                android:background="@drawable/ic_background_textview_connexion"
                android:layout_height="wrap_content"
                android:hint="@string/name_poi"
                android:paddingLeft="20dp"/>

            <EditText
                android:id="@+id/CategoryNameEditText"
                android:layout_width="250dp"
                android:background="@drawable/ic_background_textview_connexion"
                android:layout_height="wrap_content"
                android:hint="@string/category_poi"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"/>

            <RatingBar
                android:id="@+id/ratingBar"
                style="@android:style/Widget.Material.Light.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/button"
        android:text="@string/add_button"
        android:textColor="@color/white" />
</RelativeLayout>